--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ lru = "0.7.0"
 dotenv = "0.15.0"
 dotenv_codegen = "0.15.0"
 binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
+openssl = { version = "0.10", features = ["vendored"] }
 
